<resources>
    <string name="app_name">code</string>
    <string name="handler_1">Handler-1</string>
    <string name="handler_2">Handler-2</string>
    <string name="handler_3">Handler-3</string>
    <string name="handler_thread_str">HandlerThread Demo</string>
    <string name="stop_thread">Stop Thread</string>
    <string name="restart_thread">Restart Thread</string>
    <string name="handler_demo">Handler Demo</string>
    <string name="handler_thread_demo">HandlerThread Demo</string>
    <string name="handler_demo_str">Handler Demo</string>
    <string name="selection_screen">Selection Screen</string>
    <string name="runnable_demo">Runnable Demo</string>
    <string name="thread_app_demo">Thread Demo</string>
    <string name="runnable_1">Runnable-1</string>
    <string name="runnable_2">Runnable-2</string>
    <string name="runnable_3">Runnable-3</string>
    <string name="thread_demo">Thread Demo</string>
    <string name="thread_1">Thread-1</string>
    <string name="thread_2">Thread-2</string>
    <string name="thread_3">Thread-3</string>
</resources>