<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/screen_padding"
    tools:context=".handlerThread.HandlerThreadActivity">

    <TextView
        android:id="@+id/txtDisplayId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/text_size"
        android:layout_marginBottom="@dimen/display_text_margin" />

    <Button
        android:id="@+id/btnPublishOneId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thread_1" />

    <Button
        android:id="@+id/btnPublishTwoId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thread_2" />

    <Button
        android:id="@+id/btnPublishThreeId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thread_3" />

    <Button
        android:id="@+id/btnStopThreadId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/between_spacing"
        android:text="@string/stop_thread"/>


</LinearLayout>